Initial support for futures contracts and orders
This commit includes the addition of new test files `tests/test_backtesting_futures_orders.py` and `tests/test_contract.py`, and a new sample file `samples/backtesting_futures_bbands.py`. These additions aim to enhance the testing coverage and provide more usage examples for the application.

The backtesting logic in `basana/backtesting/account_balances.py` and `basana/backtesting/orders.py` have been modified to provide bare bones support for futures.

Changes have also been made to the core module `basana/core/pair.py` to refine the contract handling mechanism.

The `.gitignore` file has been modified to ensure that unnecessary files are not tracked by git.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea
 .venv/*
 .vscode
+.python-version
 __pycache__
 cov_html
 data/*
@@ -10,3 +11,6 @@ docs/_build
 docs/generated
 pocs/*
 venv/*
+
+# test files
+samples/data/
