--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-dateutil = "^2.8.2"
 # Optional dependencies, some of which are included in the below `extras`. They can be opted into by apps.
 plotly = {version = "^5.14.1", optional = true}
 kaleido = {version = "0.2.1", optional = true}
+invoke = "^2.2.0"
+black = "^24.3.0"
 
 [tool.poetry.extras]
 charts = ["plotly", "kaleido"]
