refactor(backtesting/exchange.py): improve code readability and maintainability
- Reformatted import statements for better readability.
- Added missing type annotations for clarity in function definitions.
- Converted `_orders.values()` to `list` explicitly to ensure compatibility and clarity in return type.
- Fixed typo in parameter comment from 'stragegy' to 'strategy'.
- Wrapped assert statements and error messages for better readability.
- Introduced `ContractInfo` and `Contract` imports to extend functionality.
- Adjusted method signatures to span multiple lines for improved readability.
- Clarified logic in `_round_balance_updates` and `_apply_fees` methods with inline comments and clearer variable names.
- Enhanced logging messages for better debugging and monitoring.
- Ensured consistent code formatting for better maintainability.

refactor(exchange.py): improve code readability with better formatting

- Reformatted multiline expressions and method calls for clarity.
- Introduced line breaks in complex conditional statements and method arguments for better readability.
- Ensured consistent use of whitespace and indentation for improved code structure.

feat(backtesting/requests.py, core/helpers.py): add futures order support and rounding helper

- Added support for futures orders including market, limit, and stop futures orders in `backtesting/requests.py`. This allows for more comprehensive backtesting capabilities, including futures trading strategies.
- Introduced a new helper function `round_decimal_to_increment` in `core/helpers.py` to support precise rounding of order prices to the nearest allowed increment, enhancing order validation and execution accuracy.

refactor(basana/core): remove price_increment from Contract class
feat(tests/helpers.py): add tests for rounding decimal values to increments
refactor(tests): simplify order creation in backtesting tests
feat(setup.cfg): extend flake8 ignore rules for better code style compatibility
refactor(basan

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,12 @@ testpaths = tests
 
 [flake8]
 max-line-length=120
+# max-line-length=88 # Uncomment to enforce 88-character line length for black formatting
 # E126: continuation line over-indented for hanging indent. Ignored because imports look bad when not over-indented.
 # E221: multiple spaces before cursor. Ignored to allow aligning '=' signs.
 # E241: multiple spaces after ':' or ','. Ignored to allow aligning values in dicts.
 ignore=E126,E221,E241
+extend-ignore = E203, W503
 exclude=
 	./.venv
 	./docs
